<resources>
    <string name="app_name">PokéDex</string>
    <string name="pokemon">Pokemon</string>

    <!--    PokéDex Fragment    -->
    <string name="no_results_search">No results for: %s</string>
    <string name="no_results">No results :(</string>

    <!--    Menu items    -->
    <string name="menu_home">Home</string>
    <string name="menu_search">Search</string>
    <string name="menu_my_pokemon">My Pokemon</string>

    <!--    Detail Fragment   -->
    <string name="detail_description">Description</string>
    <string name="detail_profile">Profile</string>
    <string name="detail_height">Height:</string>
    <string name="detail_weight">Weight:</string>
    <string name="detail_experience">Experience:</string>
    <string name="caught">Marked %s as caught!</string>
    <string name="not_caught">Marked %s as NOT caught!</string>
    <string name="experience">%s XP</string>
    <string name="height">%s m</string>
    <string name="weight">%s KG</string>
    <string name="cd_catch">Catch!</string>
    <string name="cd_image">Pokemon Poster</string>
    <string name="cd_rotate">Rotate</string>

    <!--    My Pokemon Fragment     -->
    <string name="no_saved_pokemon"><b>No caught pokemon!</b>\n Pokemon you mark as caught appear here.</string>
    <string name="date_format">%s/%s/%s</string>

    <!--    Placeholders  -->
    <string name="types_placeholder">Types…</string>
    <string name="hp_placeholder">HP</string>
    <string name="attack_placeholder">Attack</string>
    <string name="defense_placeholder">Defense</string>
    <string name="speed_placeholder">Speed</string>
    <string name="loading_placeholder">Loading…</string>

</resources>
