<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clDetail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="12dp"
    android:paddingRight="12dp"
    tools:context=".detail.DetailFragment">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rvTypes">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvHP"
                android:layout_width="64dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/hp_placeholder" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ProgressBar
                    android:id="@+id/pbHp"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleY="5" />

                <TextView
                    android:id="@+id/tvHPDigit"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="2dp"
                    android:gravity="center_vertical"
                    android:text="@string/hp_placeholder" />
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvAttack"
                android:layout_width="64dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/attack_placeholder" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ProgressBar
                    android:id="@+id/pbAttack"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleY="5" />

                <TextView
                    android:id="@+id/tvAttackDigit"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="2dp"
                    android:gravity="center_vertical"
                    android:text="@string/attack_placeholder" />
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvDefense"
                android:layout_width="64dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/defense_placeholder" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ProgressBar
                    android:id="@+id/pbDefense"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleY="5" />

                <TextView
                    android:id="@+id/tvDefenseDigit"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="2dp"
                    android:gravity="center_vertical"
                    android:text="@string/defense_placeholder" />
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvSpeed"
                android:layout_width="64dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/speed_placeholder" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ProgressBar
                    android:id="@+id/pbSpeed"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleY="5" />

                <TextView
                    android:id="@+id/tvSpeedDigit"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="2dp"
                    android:gravity="center_vertical"
                    android:text="@string/speed_placeholder" />
            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/ivPokemon"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:contentDescription="@string/cd_image"
        android:scaleX="2"
        android:scaleY="2"
        android:src="@drawable/ic_launcher_foreground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/ibRotate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/cd_rotate"
        android:src="@drawable/ic_rotate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivPokemon" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTypes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ibRotate" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/detail_description"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/detail_profile"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="68dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvDescrption"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/loading_placeholder" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:text="@string/detail_height"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvHeight"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/loading_placeholder" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:text="@string/detail_weight"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvWeight"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/loading_placeholder" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:text="@string/detail_experience"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvExperience"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/loading_placeholder" />

        </LinearLayout>

    </LinearLayout>

    <ImageButton
        android:id="@+id/ibCatch"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="12dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/cd_catch"
        android:scaleType="centerInside"
        android:src="@drawable/ic_open_pokeball"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>